Seconf backend commit

--- a/apps/api/CedearLedger.Api/appsettings.Development.json
+++ b/apps/api/CedearLedger.Api/appsettings.Development.json
@@ -4,5 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CedearLedger": "Server=localhost\\SQLEXPRESS;Database=CedearLedgerDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "IOL": {
+    "BaseUrl": "https://api.invertironline.com",
+    "Username": "",
+    "Password": "",
+    "Mercado": "BCBA",
+    "Panel": "General"
+  },
+  "Ingestion": {
+    "Enabled": true,
+    "DollarRates": {
+      "IntervalMinutes": 15,
+      "InitialDelaySeconds": 10
+    },
+    "CedearPrices": {
+      "IntervalMinutes": 30,
+      "InitialDelaySeconds": 40
+    }
   }
 }
