--- a/apps/api/CedearLedger.Api/appsettings.json
+++ b/apps/api/CedearLedger.Api/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CedearLedger": "Server=localhost;Database=CedearLedgerDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "IOL": {
+    "BaseUrl": "https://api.invertironline.com",
+    "Username": "",
+    "Password": "",
+    "Mercado": "BCBA",
+    "Panel": "General"
+  },
+  "Ingestion": {
+    "Enabled": true,
+    "DollarRates": {
+      "IntervalMinutes": 15,
+      "InitialDelaySeconds": 10
+    },
+    "CedearPrices": {
+      "IntervalMinutes": 30,
+      "InitialDelaySeconds": 40
+    }
+  }
 }
